# reqwestApi

./: .env  Cargo.toml
src/: main.rs  serd_mod.rs
